[package]
name = "azusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["png","window"]
png = ["immo","dep:png"]
window = ["raw-window-handle","winapi","xlib","wayland"]
xlib = ["window","safex"]
wayland = ["window"]

[dependencies]
png = { version = "0.17.7", optional = true }
immo = { version = "0.1.2", optional = true }
raw-window-handle = { version = "0.5.1", optional = true }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["winuser","windef","wingdi"], optional = true }

[target."cfg(unix)".dependencies]
safex = { git = "https://github.com/Lattexshz/safex", features = ["xlib"], optional = true }

[dev-dependencies]
winit = "0.28.3"